--- a/mappingeventbrokerrestrictions.html
+++ b/mappingeventbrokerrestrictions.html
@@ -3,6 +3,8 @@ layout: documentation
 title: Mapping Event Broker 
 teaser: Appccelerate your event mappings from source to destination
 navigation:
+   - name: Overview
+     link: mappingeeventbroker.html	 
    - name: Tutorial
      link: mappingeeventbrokertutorial.html	 
    - name: Mappers
