--- a/mappingeventbrokerrestrictions.html
+++ b/mappingeventbrokerrestrictions.html
@@ -4,7 +4,7 @@ title: Mapping Event Broker
 teaser: Appccelerate your event mappings from source to destination
 navigation:
    - name: Overview
-     link: mappingeeventbroker.html	 
+     link: mappingeventbroker.html	 
    - name: Tutorial
      link: mappingeeventbrokertutorial.html	 
    - name: Mappers
