--- a/scopingeventbrokertutorial.html
+++ b/scopingeventbrokertutorial.html
@@ -3,6 +3,8 @@ layout: documentation
 title: Scoping Event Broker 
 teaser: Appccelerate your asynchronous events by scoping it
 navigation:
+   - name: Overview
+     link: scopingeventbroker.html	 	
    - name: Tutorial
      link: scopingeventbrokertutorial.html	 	
    - name: Unit Of Work
