State Machine: documented persistence

--- a/statemachineexceptionhandling.html
+++ b/statemachineexceptionhandling.html
@@ -23,12 +23,14 @@ navigation:
      link: statemachinelogging.html
    - name: Reports
      link: statemachinereports.html
+   - name: Persistence
+     link: statemachinepersistence.html   
    - name: Testability
      link: statemachinetestability.html
    - name: Complete State Machine Sample
      link: statemachinesample.html
    - name: Specifications
-     link: statemachinespecifications.html		 
+     link: statemachinespecifications.html
 ---
 <h2>Exception Handling</h2>
 <p>
