--- a/statemachineactions.html
+++ b/statemachineactions.html
@@ -23,14 +23,15 @@ navigation:
      link: statemachinelogging.html
    - name: Reports
      link: statemachinereports.html
+   - name: Persistence
+     link: statemachinepersistence.html   
    - name: Testability
      link: statemachinetestability.html
    - name: Complete State Machine Sample
      link: statemachinesample.html
    - name: Specifications
-     link: statemachinespecifications.html		 
+     link: statemachinespecifications.html
 ---
-
 <h2>Actions</h2>
 <p>
 Actions are used to execute code when a transition is executed.
