State Machine: added documentation about events

--- a/statemachine.html
+++ b/statemachine.html
@@ -19,6 +19,8 @@ navigation:
      link: statemachineexceptionhandling.html
    - name: Extensions
      link: statemachineextensions.html
+   - name: Events
+     link: statemachineevents.html
    - name: Logging
      link: statemachinelogging.html
    - name: Reports
@@ -30,7 +32,7 @@ navigation:
    - name: Complete State Machine Sample
      link: statemachinesample.html
    - name: Specifications
-     link: statemachinespecifications.html		 
+     link: statemachinespecifications.html
 ---
 <h2>Motivation</h2>
 <p>
