--- a/statemachinesample.html
+++ b/statemachinesample.html
@@ -19,6 +19,8 @@ navigation:
      link: statemachineexceptionhandling.html
    - name: Extensions
      link: statemachineextensions.html
+   - name: Events
+     link: statemachineevents.html
    - name: Logging
      link: statemachinelogging.html
    - name: Reports
