--- a/statemachinepassivestatemachine.html
+++ b/statemachinepassivestatemachine.html
@@ -29,6 +29,8 @@ navigation:
      link: statemachinepersistence.html   
    - name: Testability
      link: statemachinetestability.html
+   - name: Custom Types for States and Events
+     link: statemachinecustomtypes.html
    - name: Complete State Machine Sample
      link: statemachinesample.html
    - name: Specifications
