Added a hint to the volatile enlistment MSDN article.

--- a/scopingeventbrokertransactionscope.html
+++ b/scopingeventbrokertransactionscope.html
@@ -83,4 +83,4 @@ When the scope is disposed but not completed no event will be fired!
 }
     ]]>
 	</script>
-Or dependent transaction clones!	
+Or dependent transaction clones! For those who are interested in the implemenation details of this feature I can tell we are using volatile enlistments. More information can be found <a href="http://msdn.microsoft.com/en-us/magazine/cc163688.aspx" target="_blank">here</a>.	
