Index: added link to google group and twitter

--- a/index.html
+++ b/index.html
@@ -179,6 +179,19 @@ title: Home
 
 	</ul><!-- end .projects-carousel -->
 	
+	<h6 class="section-title">Discuss with us</h6>
+	
+	<div class="infobox one-half">
+		<p>
+		    <a class="button" href="https://groups.google.com/forum/#!forum/appccelerate">Appccelerate Google Group</a>
+		</p>
+	</div>
+	<div class="infobox last-half">
+		<p>
+		    <a class="button" href="https://twitter.com/appccelerate">Twitter: @appccelerate</a>
+		</p>
+	</div>
+	
 	<h6 class="section-title">Donators</h6>
 	
 	<div class="container clearfix one-half">
