added donators page (renamed several existing places to sponsors)

--- a/donators.html
+++ b/donators.html
@@ -1,35 +1,25 @@
 ---
 layout: default
-title: Donators
+title: Donations
 ---
 	<div class="container clearfix">
 
 		<header class="page-header">
 		
-			<h1 class="page-title">Without our donators, appcceleration would decelerate.</h1>
+			<h1 class="page-title">If you like our work, make a donation to the red cross.</h1>
 			
 		</header><!-- end .page-header -->
 
 	</div><!-- end .container -->
 
-	<section id="map">
-		<p class="container">Something went wrong... Try to enable your JavaScript!</p>
-	</section><!-- end #map -->
-
-	<div class="container clearfix one-half">
-			<h3>Contact Info</h3>
-			<p>bbv Software Services AG<br/>
-			Blumenrain 10, 6002 Luzern<br/>
-			Switzerland</p>
-
-				<p>Phone: +41 41 429 01 11<br/>
-				Email: info + at + bbv.ch<br/>
-				Web: <a href="http://www.bbv.ch">bbv.ch</a></p>
-		
-		
+	<div class="container clearfix">
+		<p>Please donate to the red cross instead of Appccelerate. You can donate by PayPal <a href="http://www.icrc.org/eng/donations/">here</a>.</p>
+		<p>Please dedicate your donation to Appcclerate in the form and let us know the amount you donated (mail the paypal paiment receipt to appccelerate(at)gmail.com). This is motivation enough for us to keep going.</p>
+		<p>Thank you very much and happy coding!</p>		
 	</div><!-- end .container -->
 	
-	<div class="container clearfix last-half">
-			<h3>License Sponsors</h3>
-			<p><a href="http://www.ndepend.com"><img src="img/NDependLogo_PoweredBy.PNG"" /></a></p>
-	</div><!-- end .container -->
+	<div class="container clearfix">
+		<h2>Donators</h2>
+		<p>anonymous: 200$</p>
+	</div>
+	
