--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ title: Home
 		</p>
 	</div>
 	
-	<h6 class="section-title">Donators</h6>
+	<h6 class="section-title">Sponsors</h6>
 	
 	<div class="container clearfix one-half">
 		<a href="http://www.bbv.ch" target="_blank" ><img src="img/bbv_ag.jpg" /></a>
