added our first donator

--- a/donators.html
+++ b/donators.html
@@ -20,6 +20,6 @@ title: Donations
 	
 	<div class="container clearfix">
 		<h2>Donators</h2>
-		<p>anonymous: 200$</p>
+		<p>Jonathan Reis, Inner Harbour Software: 200$</p>
 	</div>
 	
